# Week7

Week7/task1/: build.gradle
Week7/task1/include/: matplotlibcpp.h
Week7/task1/src/: CMakeLists.txt  Makefile  main.cpp
cmake-variant/src/: main.cpp
